# FlappyBird_WinAPI

./: CMakeLists.txt  Flappy.h  README.md  main.cpp
Bird/: Bird.cpp  Bird.h
Game/: Game.cpp  Game.h  GameState.cpp  GameState.h  Scene.cpp  Scene.h
Game/Scene/: Scene.cpp  Scene.h
Game/Shop/: Shop.cpp  Shop.h
Helper/: Helper.cpp  Helper.h
Pipe/: Pipe.cpp  Pipe.h
report/: Baryko_zapiska_proverennaya.docx  Poyasnitelnaya_Zapiska.docx  Scheme.vsdx  ~$$Scheme.~vsdx
